2012-02-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed file type recognition and frame drops
	for VC1 elementary streams that do not start with a sequence
	header but with frame or field packets instead.

	* mkvmerge: bug fix: Fixed mis-detection as unsupported DV files
	(happened for e.g. PGS subtitle files).

2012-02-12  Moritz Bunkus  <moritz@bunkus.org>

	* doc: enhancement: Updates for option file usage and supported
	subtitle formats.

2012-02-09  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.3.0.

2012-02-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: mkvmerge will parse and apply the audio
	encoder delay in MP4 files that contain said information in the
	format that iTunes writes it. Fix for bug 715.

2012-02-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Implemented support for treating several
	input files as if they they had been concatenated binarily into a
	single big input file. Snytax is "mkvmerge -o out.mkv ( in1.ts
	in2.ts in3.ts )". This feature has already been present since
	version 5.1.0 but never been mentioned in the ChangeLog. Support
	for this feature in mmg is still missing.

2012-01-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Blocks with "BlockAdditions" will no longer
	be muxed as "SimpleBlock" elements discarding the additions but
	instead as "BlockGroup" elements. This applies to e.g. WAVPACK4
	tracks with correction files as the correction data is stored in
	"BlockAdditions". Fix for bug 713.

	* mkvmerge: bug fix: Fixed some more issues with (E)AC3 being
	misdtected as AVC elementary streams.

2012-01-27  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The header editor was sometimes creating two
	instances of an element if an element was added to the second or
	one of the later tracks. Fix for bug 711.

	* mkvpropedit, mmg: bug fix: Trying to modify a file located in a
	path mounted with GVFS SFTP will no longer crash the