@@ -89,6 +89,10 @@ Medina, Sergi <nousernameremain@gmail.com>
 Maassen, René <bmom43@hotmail.com>
     * Dutch translation
 
+Main, Nicholai <goyuken@gmail.com>
+    * h.264 width/height calculation fix for pixel formats other than
+      4:2:0
+
 Matsnev, Mike (Haali) <mike@po.cs.msu.su>
     * CreateFileUtf8() function
     * Windows implementation for vsscanf
