@@ -183,3 +183,4 @@ T_334mp4_audio_encoder_delay:2afe7b533c9f1ed35168e60aaca20dff:passed:20120206-10
 T_335ui_locale_cs_CZ:71fab8df9e8e061badc87c06cf36f544-a37e1bdc2b0c026c2970c08841c5e4df:passed:20120206-191406:0.506867942
 T_336pgs_misdetected_as_dv:6342b314a120aa4034fc0c9cecb327c7:passed:20120222-121642:0.020091075
 T_337vc1_es_sequence_header_not_at_start:354ac585f49800fe79ec0b798f3811ee:passed:20120222-140257:4.328456489
+T_338h264_width_height_pixl_format_non_420:0a9a279941dc8824f6793fdbc9e57f85-ok:passed:20120222-153143:1.279671419
