@@ -1,5 +1,9 @@
 2012-02-22  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: bug fix: The width and height of h.264 video tracks
+	with a pixel format other than 4:2:0 are now calculated
+	correctly. Fix for bug 649. Patch by Nicholai Main (see AUTHORS).
+
 	* mkvmerge: bug fix: Fixed file type recognition and frame drops
 	for VC1 elementary streams that do not start with a sequence
 	header but with frame or field packets instead.
